# django-crm

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
crm/accounts/: views.py
crm/accounts/templates/accounts/: customer.html  dashboard.html  main.html  navbar.html  products.html
crm/crm/: settings.py
