[tool.poetry]
name = "crm"
version = "0.1.0"
description = ""
authors = ["vincent"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.*"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.247"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
